--- a/app/templates/lib.tmpl
+++ b/app/templates/lib.tmpl
@@ -9,6 +9,7 @@
 <script type="text/javascript" src="/lib/jquery-ui.min.js"></script>
 <script type="text/javascript" src="/lib/jquery.tablednd.js"></script>
 
+<script type="text/javascript" src="/static/lib/popper.min.js"></script>
 <script type="text/javascript" src="/lib/bootstrap.min.js"></script>
 <script type="text/javascript" src="/lib/goldenlayout.min.js"></script>
 
