--- a/app/templates/menu.tmpl
+++ b/app/templates/menu.tmpl
@@ -41,10 +41,10 @@
       </li>
 
 
-    <li style="padding-right:0px" title="Login with Google" data-toggle="tooltip" data-placement="right" id="menuUser" class="mainWinOnly">
+    <li style="padding-right:0px" title="Login with Google" data-toggle="tooltip" data-placement="right" id="menuUser" class="mainWinOnly httpsOnly">
         <span id="login" class="glyphicon glyphicon-log-in" >
     </li>
-    <li style="padding-right:0px" class="mainWinOnly" data-toggle="tooltip" data-placement="right" id="menuUser1" title="Session in Google Sheet">
+    <li style="padding-right:0px" class="mainWinOnly httpsOnly" data-toggle="tooltip" data-placement="right" id="menuUser1" title="Session in Google Sheet">
         <image id="picture" class="mainWinOnly" style="height:18px;width:18px;margin:7px 4px"></image>
     <div class="frame">
       <ul>
