--- a/app/tmpl/main.tmpl
+++ b/app/tmpl/main.tmpl
@@ -86,7 +86,7 @@
     d3.select("#logo")
       .attr("title","{{.Appname}}")
       .on("click",function(){
-        window.open("/static/")
+        window.open("/entry/")
       })
 
     var M = S.initMenu().renders(renders).renderList(renderList).dispatch(dispatch);
