initLayout without load previous session

--- a/app/tmpl/main.tmpl
+++ b/app/tmpl/main.tmpl
@@ -134,7 +134,7 @@
         }
       })
     }
-    var W = S.NewWindowManager().dispatch(dispatch).theme(theme).domain(domain).P(PanelManager).win(win).config(cfg).extId({{.ExtID}}) //app(app) //init windows manager
+    var W = S.NewWindowManager().dispatch(dispatch).theme(theme).domain(domain).P(PanelManager).win(win).config(cfg).extId({{.ExtID}}).initedLayout(initedLayout) //app(app) //init windows manager
     W();
       
     /* TO USE PUBLIC GSHEET */
