rm link from menu

--- a/app/templates/menu.tmpl
+++ b/app/templates/menu.tmpl
@@ -65,9 +65,15 @@
   <li id="extension" style="display: none">
     <a href="https://chrome.google.com/webstore/detail/nbrowser-plugin/djcdicpaejhpgncicoglfckiappkoeof" target="_blank"><img src="/static/image/extension_install.png"  style="height:18px;width:18px;margin:7px 4px" title="install chrome extension"></img></a>
   </li>
-  <li id="logo" data-toggle="tooltip" data-placement="left">
-      <image src="/static/image/icon.png" style="height:18px;width:18px;margin:7px 4px"></image><span id="version" style="color:#777"></span>
-  </li>
 </ul>
+<span style="float:right">
+  <!--
+  <li id="logo" data-toggle="tooltip" data-placement="left">
+  -->
+      <image src="/static/image/icon.png" style="height:18px;width:18px;margin:7px 4px"></image><span id="version" style="color:#777"></span>
+　<!--
+  </li>
+-->
+</span>
 </div>
 {{end}}
