--- a/app/templates/modalSave.tmpl
+++ b/app/templates/modalSave.tmpl
@@ -5,19 +5,21 @@
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="modalSaveTitle">Save Session</h5>
+        <!--
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
+        -->
       </div>
       <div class="modal-body" id="modalSaveBody">
-        <table>
+        <table style="width:100%">
         <tr>
         <td style="vertical-align:top;padding:5px">
           <label>Id
           </label>
         </td>
         <td>
-        <input id="modalSaveId" type="text" style="width:200px;margin:1px;padding:1px"></input>
+        <input id="modalSaveId" type="text" style="width:100%;margin:1px;padding:1px"></input>
         </td>
       </tr>
       <tr>
@@ -25,7 +27,7 @@
         <label>Note</label>
       </td>
       <td>
-        <textArea id="modalSaveNote" style="width:200px;height:336px;text-align:left;margin:1px;padding:1px;vertical-align:top"></textArea>
+        <textArea id="modalSaveNote" style="height:336px;width:100%;text-align:left;margin:1px;padding:1px;vertical-align:top"></textArea>
       </td>
     </tr>
   </table>
