fix init layout name

--- a/app/tmpl/main.tmpl
+++ b/app/tmpl/main.tmpl
@@ -135,6 +135,7 @@
             "title": renders[d].label || d,
             "componentState": {
               "render": d,
+               "name": renders[d].label || d,
             }
           })
         } else if (d.match(/space:\S+/)) {
