--- a/app/templates/menu.tmpl
+++ b/app/templates/menu.tmpl
@@ -36,6 +36,7 @@
           <ul id="fileUi">
             <li id="import" title="Load session" data-toggle="tooltip" data-placement="bottom" ><span class="glyphicon glyphicon-open"></span> Load Session</li>
             <li id="export" title="Save session" data-toggle="tooltip" data-placement="bottom" ><span class="glyphicon glyphicon-save"></span> Save Session</li>
+            <li id="manage" title="Manage session" data-toggle="tooltip" data-placement="bottom" ><span class="glyphicon glyphicon-wrench"></span> Manage Session</li>
           </u1>
         </div>
       </li>
