change to 180 day

--- a/app/templates/lib.tmpl
+++ b/app/templates/lib.tmpl
@@ -5,15 +5,20 @@
     module = undefined;
   }
 </script>
+<!-- Verisons -->
 <script type="text/javascript" src="/lib/jquery.min.js"></script>
 <script type="text/javascript" src="/lib/jquery-ui.min.js"></script>
 <script type="text/javascript" src="/lib/jquery.tablednd.js"></script>
 
-<script type="text/javascript" src="/static/lib/popper.min.js"></script>
 <script type="text/javascript" src="/lib/bootstrap.min.js"></script>
+<!--
+<script type="text/javascript" src="/static/lib/popper.min.js"></script>
+-->
 <script type="text/javascript" src="/lib/d3.v5.min.js"></script>
+<!-- 
 <script type="text/javascript" src="/lib/dat.gui.min.js"></script>
 <script type="text/javascript" src="/lib/awesomplete.min.js"></script>
+-->
 <script type="text/javascript" src="/static/lib/localforage.min.js"></script>
 
 <script>
