--- a/app/tmpl/main.tmpl
+++ b/app/tmpl/main.tmpl
@@ -3,6 +3,7 @@
 
 <head>
   <title id="title">{{.Appname}}</title>
+  <meta charset="UTF-8">
   <link rel="manifest" href="/manifest.json"> <!-- For Progressive Web App -->
   {{template "lib"}}
   {{range .Libs}}
